--- a/index.html
+++ b/index.html
@@ -20,5 +20,45 @@
     />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <nav class="navbar">
+      <div class="container navigation">
+        <a href="index.html" class="logo">CDJDR</a>
+        <ul class="navigation-container">
+          <li class="navigation-list">
+            <a href="" class="navigation-link">Inicio</a>
+          </li>
+          <li class="navigation-list">
+            <a href="" class="navigation-link">Servicios</a>
+          </li>
+          <li class="navigation-list">
+            <a href="" class="navigation-link">Contacto</a>
+          </li>
+          <li class="navigation-list">
+            <a href="" class="navigation-link">Blog</a>
+          </li>
+          <li class="navigation-list">
+            <a href="" class="navigation-link">Login</a>
+          </li>
+        </ul>
+        <ul class="networks-container">
+          <li class="network-list">
+            <a href="" class="network-link"
+              ><i class="fa-brands fa-facebook-f"></i
+            ></a>
+          </li>
+          <li class="network-list">
+            <a href="" class="network-link">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+          </li>
+          <li class="network-list">
+            <a href="" class="network-link">
+              <i class="fa-brands fa-twitter"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </body>
 </html>
